    * Overhaul of all actions names. New names are:
        'pre_copy', 'pre_copy_to_folder', 'pre_copy_item',
        'post_copy_item', 'post_copy_to_folder', 'post_copy',
        'pre_remove', 'pre_remove_from_folder', 'pre_remove_item',
        'remove_item', 'post_remove_item', 'post_remove_from_folder', 'post_remove'
    * target folders in remove sorted in reverse


    user visible changes, admin:

    programmer visible changes:
    * Removed redundant imports using snakefood
    * Removed redundant file do_something.py
    * improved handling of Null values in resolve_to_list
    
 24/6/2014 0.9.14   Shai Shasag <shai@waves.com>

     user visible changes, client:
     * Names of curl config files have same legth due to 0 padding the number. This will creaet more stable
       progress report in a progress dialog.


22/6/2014 0.9.14   Shai Shasag <shai@waves.com>

     user visible changes, client:
     * new command test-import to force loading of all required modules provoking error if any import fails.


20/6/2014 0.9.13.1   Shai Shasag <shai@waves.com>
    user visible changes, client & admin:
    * Fixed exceptions in interactive mode - no functionality change.

16/6/2014 0.9.13   Shai Shasag <shai@waves.com>

    programmer visible changes:
    Integrated all var-stack features:
    * InstallItem creates it's own var_list.
    * InstallItem pushes it's own var_list to var_stack through 'with' statement.
    * All action lists for an Installitem are taken from var_stack with variables.

9/6/2014 0.9.12   Shai Shasag <shai@waves.com>

    user visible changes, client:
    * new variable __PYTHON_VERSION__ to record the version of python instl was compiled with

    user visible changes, admin:
    * Added option to limit stage2svn to specific folders, to save time.
    * up-repo-rev now creates a batch file like all other commands.
    * up-repo-rev does not use boto - depends on aws command line tools.