@@ -1,0 +1,10 @@
+
+--- !define_Mac
+REMOVE_EMPTY_FOLDERS_IGNORE_FILES:
+    - .DS_Store
+    - "Icon\x0D"
+
+--- !define_Win
+REMOVE_EMPTY_FOLDERS_IGNORE_FILES:
+    - desktop.ini
+    - Folder.ico
