@@ -110,6 +110,7 @@ def prepare_args_parser():
     help_parser = subparsers.add_parser('help')
     make_sig_parser = subparsers.add_parser('make-sig', help='create sha1 checksum and rsa signature for a file')
     parallel_run_parser = subparsers.add_parser('parallel-run', help="Run processes in parallel")
+    remove_empty_folders = subparsers.add_parser('remove-empty-folders', help="remove folders is they are empty")
     remove_parser = subparsers.add_parser('remove', help="remove items installed by copy")
     set_exec_parser = subparsers.add_parser('set-exec', help='set executable bit for appropriate files')
     stage2svn_parser = subparsers.add_parser('stage2svn', help='add/remove files in staging to svn sync repository')
@@ -136,7 +137,7 @@ def prepare_args_parser():
                         create_repo_rev_file_parser, verify_index_parser),
              'do_something': (version_parser, help_parser, parallel_run_parser,
                               unwtar_parser, check_checksum_parser, create_folders_parser,
-                              set_exec_parser, test_import_parser)
+                              set_exec_parser, test_import_parser, remove_empty_folders)
             }
     for the_mode, parsers in modes.iteritems():
         for some_parser in parsers:
@@ -145,7 +146,8 @@ def prepare_args_parser():
     need_input_options = (sync_parser, copy_parser, synccopy_parser,
                           trans_parser, make_sig_parser, check_sig_parser,
                             verify_index_parser, parallel_run_parser, check_checksum_parser,
-                            create_folders_parser, set_exec_parser, remove_parser)
+                            create_folders_parser, set_exec_parser, remove_parser,
+                            remove_empty_folders)
     need_output_options = (copy_parser, sync_parser, synccopy_parser,
                            trans_parser, create_links_parser, fix_symlinks_parser,
                            up2S3_parser, fix_props_parser, stage2svn_parser,
